# Autoref

./: .gitattributes  CMakeLists.txt  Li.qrc  README.md  qtquickcontrols2.conf
proto/: vision_detection.proto  zss_rec.proto
qml/: ControlBoard.qml  LMenuBar.qml  StatusBoard.qml  li.qml
src/: interaction.cpp  interaction.h  main.cpp  parammanager.h  pluginmanager.cpp  pluginmanager.h
src/analyser/: ballstatejudger.cpp  ballstatejudger.h  globaldata.cpp  globaldata.h  param.cpp  param.h  ref_event.cpp  ref_event.h  referee.cpp  referee.h
src/gui/: field.cpp  field.h  field_layers.cpp  field_layers.h  field_layers_func.cpp  field_style.cpp  field_style.h  zslayer.cpp  zslayer.h
src/plugins/udp_receiver/: CMakeLists.txt
src/plugins/udp_receiver/src/: udpreceiver.cpp
src/plugins/udp_sender/: CMakeLists.txt
src/plugins/udp_sender/src/: udpsender.cpp
src/plugins/vision_gd/: CMakeLists.txt
src/plugins/vision_gd/include/: ballstate.h  chipsolver.h  dealball.h  dealrobot.h  globaldata.h  maintain.h  messageformat.h  visionmodule.h
src/plugins/vision_gd/src/: ballstate.cpp  chipsolver.cpp  dealball.cpp  dealrobot.cpp  maintain.cpp  visionmodule.cpp
src/utils/: parammanager.h  staticparams.h  zsplugin.hpp
zsplugin_test/: interaction.cpp  interaction.h  main.cpp  main.qml  plugin_test.pro  plugins.h
